--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 0px;
+  position: fixed;
+  margin: auto;
+  left: 0;
+  right: 0;
 }
 header .top-navbar {
   width: 375px;
